# Calculator

./: CMakeLists.txt  tst_test_calc_calc.cpp  tst_test_calc_double_to_string.cpp  tst_test_calc_operation.cpp  tst_test_calc_parenthesis.cpp  tst_test_calc_searchOperation.cpp
src/: calculator.cpp  calculator.h
